glibc (2.7-8) unstable; urgency=low

  * 

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 13 Feb 2008 00:00:22 +0100

glibc (2.7-7) unstable; urgency=low

  [ Arthur Loiret ]
  * patches/sh4/cvs-nptl-private-futexes.diff: new patch from CVS to fix
    FTBFS on sh4.

  [ Samuel Thibault ]
  * patches/hurd-i386/cvs-epfnosupport.diff: new patch to fix socket()
    error for IPV6.

  [ Aurelien Jarno ]
  * patches/any/local-ldso-disable-hwcap.diff: enable tls/ directory even
    when hardware capabilities are disabled. This workarounds a bug in
    nvidia-glx.  Closes: #453480.
  * patches/mips/local-r10k.diff: new patch from Florian Lohoff to
    workaround LL/SC bug on R10k.  Closes: #462112.
  * patches/mips/submitted-mipsn32.diff: new patch to fix truncate64()
    on MIPS n32.
  * kfreebsd/local-sysdeps.diff: update to revision 2129 (from glibc-bsd).
  * patches/any/cvs-epoll_h.diff: new patch from CVS to define EPOLLRDHUP
    in /usr/include/sys/epoll.h. Closes: #463342.
  * patches/any/submitted-gcc-4.3.diff: pass -isystem option for GCC's
    include-fixed/ directory. Fixes build with gcc-4.3.
  * debian/control.in/main: bump to Standards-Version 3.7.3.
  * debian/sysdeps/*.mk: build main flavours with -O2 instead of -O3 (risks to
    trigger a bug in the compiler are higher with -O3). Remove -g from cflags,
    as it is automatically added by the glibc scripts.
  * debhelper.in/nscd.init: depends on $remote_fs instead of $local_fs.
    Closes: #464022.
  * patches/any/submitted-ieee754_h.diff: use __BIG_ENDIAN instead of
    BIG_ENDIAN. Closes: #464594.
  * local/manpages/ld.so.8: Add missing options to manpage. Closes:
    #464395.
  * rules.d/build.mk: build the locales in the build target instead of the
    install one to workaround a bug in fakeroot.  Closes: #464924.
  * patches/alpha/local-dl-procinfo.diff: fix _dl_string_platform() to accept
    NULL pointers, which happens on statically linked binaries.  Closes:
    bug#456260.