@@ -1,3 +1,9 @@
+2008-01-02  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/check_pf.c (make_request): Fix
+	recognition of interface family.
+
+
 2007-11-12  Ulrich Drepper  <drepper@redhat.com>
 
 	* include/ifaddrs.c (struct in6addrinfo): Add prefixlen field.
@@ -339,7 +345,7 @@ diff -u -r1.12 -r1.13
 +		{
 +		  address = local;
 +		out:
-+		  if (ifam->ifa_family != AF_INET)
++		  if (ifam->ifa_family == AF_INET)
  		    {
 -		    out_v4:
 -		      if (*(const in_addr_t *) (address ?: local)
