@@ -1,8 +1,9 @@
 glibc (2.7-8) unstable; urgency=low
 
-  * 
+  * any/cvs/rfc3484.diff: patch from CVS to fix recognition of interface
+    family.  Closes: #465583.
 
- -- Aurelien Jarno <aurel32@debian.org>  Wed, 13 Feb 2008 00:00:22 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 13 Feb 2008 17:12:18 +0100
 
 glibc (2.7-7) unstable; urgency=low
 
